# bobcat

./: LICENSE  README.md  bobcat.py  config.ini  config.py  language.py  pyproject.toml  requirements.txt  setup.cfg
bobcat/: __main__.py  bobcat.py  command.py  config.ini  config.py  kattis.py  language.py  model.py  state.py
