[metadata]
name = bobcat
author = 0WN463
version = 0.0.1
description = CLI script for browsing and submitting problems on Kattis
license = MIT
url = https://github.com/0WN463/bobcat

[options]
packages = bobcat
install_requires =
    requests
    lxml
    beautifulsoup4
python_requires = >=3.8

[options.entry_points]
console_scripts = 
    bobcat = bobcat.bobcat:main

[options.package_data]
bobcat = config.ini
